# 100-days-of-code-in-python

./: .replit  README.md  pyproject.toml
Day 1/: band-generator.py  band-name-generator.py  fix-code.py  print-number-of-characters.py  print-quotes.py  switch-variables.py  switches-variables.py
Day 2/: bmi-calculator.py  my-life-in-days-weeks-months.py  sum-two-digit-number.py
Day 3/: automatic-pizza-order-program.py  bmi-calculator-interpretation.py  leap-year-check.py  leap-year.py  odd-even-number-check.py  treasure-island-game.py
Day 4/: bank-rouletter-who-pays-the-bill.py  treasure-map-mark-with-x  virtual-coin-toss-program-heads-or-tails.py
Day 5/: highest-student-score.py  password-generator.py  solution-fizz-buzz-game.py  sum-all-even-numbers.py
Day 6/: reeborg-world-challenge-1-alone.py  reeborg-world-challenge-2-hurdle-1.py  reeborg-world-challenge-3-hurdle-2.py  reeborg-world-challenge-4-hurdle-3.py  reeborg-world-challenge-5-hurdle-4.py  reeborg-world-challenge-final-maze.py
Day 7/: unfinished-Hangman-Stage-1.py  unfinished-hangman-stage-2.py  unfinished-hangman-stage-3.py  unfinished-hangman-stage-4.py
Day01/: print-number-of-characters-in-a-name.py
day-01/: switch-variables.py
day-02/: tip-calculator.py
day-03/: treasure-island-game.py
day-04/: bank-rouletter-who-pays-the-bill.py
day-05/: highest-student-score.py  password-generator.py
day-06/: reeborg-world-challenge-1-alone.py
day-07/: unfinished-hangman-stage-2.py
day-1/: band-name-generator.py  print-number-of-characters-in-a-name.py
day-3/: odd-even-number-check.py  (+1 more)
(+47 files in other folders)
